Use the correct list type